Additional math fixes, images still out of place

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -55,13 +55,6 @@ body {
     margin: 0 auto;
 }
 
-canvas {
-    width: 500px;
-    height: 500px;
-    background-color: white;
-    color: white;
-}
-
 section {
     margin-top: 8rem;
 }
@@ -168,6 +161,24 @@ img {
     display: block;
     width: 100%;
     object-fit: cover;
+}
+#game {
+    position: absolute;
+    background-color: white;
+    top: 8px;
+    left: 8px;
+    width: 500px;
+    height: 500px;
+}
+
+#gameCanvas {
+    position: absolute;
+    border: 1px solid black;
+}
+
+#uiCanvas {
+    position: absolute;
+    border: 1px solid black;
 }
 
 
